Add 'not reachable' messages; add missing reachability check to dslam_ies1000
- jBackupDevice_dslam_ies1000: added InetAddress.isReachable() check before
  FTP fetch (was entirely missing)
- junos, ciscoios, dslam_7324, mikrotik_old: added else branch printing
  "Host X is not reachable" when host is unreachable (subclasses inherit
  the message via prepare() polymorphism)
- Fixed typo "does not exists" -> "does not exist" in 3 classes

https://claude.ai/code/session_01VSoVKs2gg9h6EXWCnjxyEv